Centered Header, fixed image positioning, stretch + border

--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -2,7 +2,7 @@
 
 header {
   position: fixed;
-  margin: 10px;
+  margin-top: 15px;
   width: 100%;
   height: 5vh;
   z-index: 3;
@@ -11,7 +11,7 @@ header {
 
 header h1 {
   margin: 0;
-  font-weight: 700;
+  font-size: 32px;
 }
 
 /* Nav */
